# pacman

./: .gitlab-ci.yml  .mailmap  NEWS  README  RELEASE  TRANSLATORS  meson.build  valgrind.supp
.github/workflows/: fast-forward.yml
doc/: BUILDINFO.5.asciidoc  PKGBUILD.5.asciidoc  alpm-hooks.5.asciidoc  asciidoc.conf  index.asciidoc  makepkg.8.asciidoc  makepkg.conf.5.asciidoc  meson.build  pacman.8.asciidoc  pacman.conf.5.asciidoc  repo-add.8.asciidoc  submitting-patches.asciidoc  translation-help.asciidoc
etc/: makepkg.conf.in  pacman.conf.in
lib/libalpm/: add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  backup.h  be_local.c  be_package.c  be_sync.c  conflict.c  conflict.h  db.c  db.h  deps.c  deps.h  diskspace.c  diskspace.h  dload.c  dload.h  error.c  filelist.c  filelist.h  graph.c  graph.h  group.c  group.h  handle.c  handle.h  hook.c  hook.h  libarchive-compat.h  log.c  log.h  package.c  package.h  pkghash.c  pkghash.h  remove.c  (+15 more)
proto/: PKGBUILD-vcs.proto
scripts/: makepkg-template.pl.in  makepkg.sh.in  pacman-db-upgrade.sh.in  pacman-key.sh.in  repo-add.sh.in  wrapper.sh.in
scripts/libmakepkg/: autodep.sh.in  buildenv.sh.in  executable.sh.in  integrity.sh.in  lint_config.sh.in  lint_package.sh.in  lint_pkgbuild.sh.in  reproducible.sh.in  source.sh.in  srcinfo.sh.in  tidy.sh.in  util.sh.in
scripts/libmakepkg/reproducible/: meson.build  source_date_epoch.sh.in
scripts/libmakepkg/tidy/: 10-docs.sh.in  10-libtool.sh.in  90-emptydirs.sh.in  meson.build  purge.sh.in  staticlibs.sh.in  strip.sh.in  zipman.sh.in
scripts/po/: POTFILES.in  (+41 more)
(+219 files in other folders)
